fix small border overlap

--- a/app/styles/Home.module.css
+++ b/app/styles/Home.module.css
@@ -179,6 +179,14 @@
 	.navbar img {
 		margin: 0 auto;
 	}
+
+	.heroSection {
+		margin-bottom: 60px;
+	}
+
+	.aboutSection {
+		/* border-top: 0px; */
+	}
 }
 
 @media (min-width: 1296px) {
